# VectorDB-With-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: semantic_search.rs
src/: db.rs  error.rs  lib.rs  main.rs  types.rs  vector.rs
tests/: integration_test.rs
