[package]
name        = "VectorDB-with-Rust"
version     = "0.1.0"
edition     = "2026"
description = "Lightweight in-memory vector database with cosine similarity search"

[lib]
name = "VectorDB_with_Rust"
path = "src/lib.rs"

[[bin]]
name = "VectorDB-with-Rust"
path = "src/main.rs"

[dependencies]
# No external deps — pure Rust standard library only

[dev-dependencies]
# nothing extra needed for tests
